# example-library-cpp

./: CMakeLists.txt  LICENSE  README.md  install_dependencies.sh
application/: CMakeLists.txt
application/src/: application.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake
external_libraries/: CMakeLists.txt
external_libraries/cmake/: ExternalLibrariesConfig.cmake
external_libraries/include/external_libraries/: external_library_a.h  external_library_b.h
external_libraries/src/: external_library_a.cpp  external_library_b.cpp
my_libraries/: CMakeLists.txt
my_libraries/cmake/: MyLibrariesConfig.cmake
my_libraries/include/my_libraries/: my_library_a.h
my_libraries/src/: my_library_a.cpp
src/: example.cpp
